Abolished css to bits

--- a/HW4/master.css
+++ b/HW4/master.css
@@ -3,20 +3,13 @@
      color:#FFF;
     display:block
     box-sizing: border-box;
-    padding:.01%;
+    padding:1px;
     margin:-8px;
 }
 
-ul {
-    margin-left:10%;
-}
-
-li {
+ul li {
     display:inline-block;
-}
-.promotion a {
-    text-decoration:none;
-    color:white;
+    margin-left:1%;
 }
 
 #free {
@@ -26,28 +19,17 @@ li {
     /*background-color:red;*/
 }
 
-.promotion:hover {
-    background-color:#33a1ff;
+a {
+    text-decoration:none;
+    color:white;
 }
 
-.navigation {
-    border:1px solid black;
-    margin:.5% -.51% 0% -.51%;
-    display:flex;
-    justify-content:space-between;
-
+.promotion:hover {
+    background-color:#33a1ff;
 }
 
 .logo {
     width: 128px;
     height: 117px;
-    margin-top:1%;
-    margin-left:12.9%;
-}
-
-.navigation a {
-    text-decoration:none;
-    display:flex;
-    justify-content:space-between;
-
+    margin-top:10px;
 }
