--- a/HW4/frontpage.css
+++ b/HW4/frontpage.css
@@ -10,7 +10,8 @@
 
 .ties {
     background-color:#F4F4F4;
-    padding-bottom:2%;  
+    padding-bottom:2%; 
+    position:relative; 
 }
 
 h1 {
@@ -18,7 +19,8 @@ h1 {
     font-size:3em;
     font-weight:lighter;
 }
-
+/*
 #ties {
-    float:bottom;
-}
+    position:absolute;
+    bottom:0px;
+}*/
