Ties spaced correctly triple and story bars added

--- a/HW4/frontpage.css
+++ b/HW4/frontpage.css
@@ -1,26 +1,73 @@
 /* main */
+.ties {
+    display:block;
+    background-color:#F4F4F4;
+    padding-bottom:1%; 
+    position:relative; 
+}
+
 .ties ul{
     display:flex;
     justify-content:space-between;
     list-style-type: none;
     background-color:#F4F4F4;
-    height:155px;
-}
-
-
-.ties {
-    background-color:#F4F4F4;
-    padding-bottom:2%; 
-    position:relative; 
+    width:945px;
+    margin-left:20%;
 }
 
 h1 {
     text-align:center;
     font-size:3em;
     font-weight:lighter;
+    margin-top:6%;
 }
-/*
-#ties {
+
+.ties img {
+    display;flex;
+    height:155px;
+    justify-content:space-between;
+}
+
+/* bow ties bar */
+.triple {
+    margin-top:10%;
+}
+
+.triple ul li {
+    color:black;
+    /*width:33%;*/
+    display:flex;
+    justify-content:space-between;
+    margin-left:1%;
+}
+
+.triple img {
+    height:200px;
+    text-align:left;
+    border-radius:2px;
+}
+
+.triple ul li img {
+    border:2px solid lightgray;
+    padding: 2px 5px 2px 5px;
+}
+
+.triple h2 {
     position:absolute;
-    bottom:0px;
-}*/
+    margin-left:200px; 
+}
+
+#story p {
+    font-size:2em;
+}
+
+#story {
+    text-align:center;  
+    margin-top:10%;
+}
+
+#story a {
+    text-transform:uppercase;
+    font-size:1em;
+}
+
