--- a/HW4/frontpage.css
+++ b/HW4/frontpage.css
@@ -73,6 +73,11 @@ h1 {
 #story a {
     text-transform:uppercase;
     font-size:1em;
+    color:#33a1ff;
+}
+
+#story a:hover {
+    color:dodgerblue;
 }
 
 .triple ul li img:hover {
